[package]
name = "lines"
version = "0.1.0"
authors = ["erikrudie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["image"] # todo do i need use_mac_framework?
